stockapp/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ing-stockpicker
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /

spec:
  ingressClassName: nginx
  rules:
    - host: picker.stockapp.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: stock-picker-web-service
                port:
                  number: 80
